--- a/Data_Extraction.ipynb
+++ b/Data_Extraction.ipynb
@@ -291,31 +291,9 @@
    "execution_count": 6,
    "id": "73874db1-bbef-45fc-ac6a-9476d2a53fcd",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0      {\"contact_id\": 4661, \"name\": \"Cecilia Velasco\"...\n",
-       "1      {\"contact_id\": 3765, \"name\": \"Mariana Ellis\", ...\n",
-       "2      {\"contact_id\": 4187, \"name\": \"Sofie Woods\", \"e...\n",
-       "3      {\"contact_id\": 4941, \"name\": \"Jeanette Iannott...\n",
-       "4      {\"contact_id\": 2199, \"name\": \"Samuel Sorgatz\",...\n",
-       "                             ...                        \n",
-       "995    {\"contact_id\": 3684, \"name\": \"Whitney Noack\", ...\n",
-       "996    {\"contact_id\": 5784, \"name\": \"Gelsomina Miglia...\n",
-       "997    {\"contact_id\": 1498, \"name\": \"Evangelista Pere...\n",
-       "998    {\"contact_id\": 6073, \"name\": \"Gareth Comolli\",...\n",
-       "999    {\"contact_id\": 4939, \"name\": \"Michelangelo Hes...\n",
-       "Name: contact_info, Length: 1000, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "contact_data['contact_info']"
+    "# contact_data['contact_info']"
    ]
   },
   {
@@ -340,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/30/2s86bps96tq3f83g91_kwwpr0000gn/T/ipykernel_40747/1783904835.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "/var/folders/30/2s86bps96tq3f83g91_kwwpr0000gn/T/ipykernel_41030/1783904835.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  first_row = contact_data.iloc[0][0]\n"
      ]
     }
@@ -501,187 +479,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "47a124f2-53b8-4c64-b65e-eaf64d42b309",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>cf_id</th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>company_name</th>\n",
-       "      <th>blurb</th>\n",
-       "      <th>goal</th>\n",
-       "      <th>pledged</th>\n",
-       "      <th>outcome</th>\n",
-       "      <th>backers_count</th>\n",
-       "      <th>country</th>\n",
-       "      <th>currency</th>\n",
-       "      <th>launched_at</th>\n",
-       "      <th>deadline</th>\n",
-       "      <th>staff_pick</th>\n",
-       "      <th>spotlight</th>\n",
-       "      <th>category &amp; sub-category</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>147</td>\n",
-       "      <td>4661</td>\n",
-       "      <td>Baldwin, Riley and Jackson</td>\n",
-       "      <td>Pre-emptive tertiary standardization</td>\n",
-       "      <td>100</td>\n",
-       "      <td>0</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>0</td>\n",
-       "      <td>CA</td>\n",
-       "      <td>CAD</td>\n",
-       "      <td>2020-02-13</td>\n",
-       "      <td>2021-03-01</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>food/food trucks</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1621</td>\n",
-       "      <td>3765</td>\n",
-       "      <td>Odom Inc</td>\n",
-       "      <td>Managed bottom-line architecture</td>\n",
-       "      <td>1400</td>\n",
-       "      <td>14560</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>158</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2021-01-25</td>\n",
-       "      <td>2021-05-25</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>music/rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1812</td>\n",
-       "      <td>4187</td>\n",
-       "      <td>Melton, Robinson and Fritz</td>\n",
-       "      <td>Function-based leadingedge pricing structure</td>\n",
-       "      <td>108400</td>\n",
-       "      <td>142523</td>\n",
-       "      <td>successful</td>\n",
-       "      <td>1425</td>\n",
-       "      <td>AU</td>\n",
-       "      <td>AUD</td>\n",
-       "      <td>2020-12-17</td>\n",
-       "      <td>2021-12-30</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>technology/web</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2156</td>\n",
-       "      <td>4941</td>\n",
-       "      <td>Mcdonald, Gonzalez and Ross</td>\n",
-       "      <td>Vision-oriented fresh-thinking conglomeration</td>\n",
-       "      <td>4200</td>\n",
-       "      <td>2477</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>24</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2021-10-21</td>\n",
-       "      <td>2022-01-17</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>music/rock</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1365</td>\n",
-       "      <td>2199</td>\n",
-       "      <td>Larson-Little</td>\n",
-       "      <td>Proactive foreground core</td>\n",
-       "      <td>7600</td>\n",
-       "      <td>5265</td>\n",
-       "      <td>failed</td>\n",
-       "      <td>53</td>\n",
-       "      <td>US</td>\n",
-       "      <td>USD</td>\n",
-       "      <td>2020-12-21</td>\n",
-       "      <td>2021-08-23</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>theater/plays</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   cf_id  contact_id                 company_name  \\\n",
-       "0    147        4661   Baldwin, Riley and Jackson   \n",
-       "1   1621        3765                     Odom Inc   \n",
-       "2   1812        4187   Melton, Robinson and Fritz   \n",
-       "3   2156        4941  Mcdonald, Gonzalez and Ross   \n",
-       "4   1365        2199                Larson-Little   \n",
-       "\n",
-       "                                           blurb    goal  pledged     outcome  \\\n",
-       "0           Pre-emptive tertiary standardization     100        0      failed   \n",
-       "1               Managed bottom-line architecture    1400    14560  successful   \n",
-       "2   Function-based leadingedge pricing structure  108400   142523  successful   \n",
-       "3  Vision-oriented fresh-thinking conglomeration    4200     2477      failed   \n",
-       "4                      Proactive foreground core    7600     5265      failed   \n",
-       "\n",
-       "   backers_count country currency launched_at    deadline  staff_pick  \\\n",
-       "0              0      CA      CAD  2020-02-13  2021-03-01       False   \n",
-       "1            158      US      USD  2021-01-25  2021-05-25       False   \n",
-       "2           1425      AU      AUD  2020-12-17  2021-12-30       False   \n",
-       "3             24      US      USD  2021-10-21  2022-01-17       False   \n",
-       "4             53      US      USD  2020-12-21  2021-08-23       False   \n",
-       "\n",
-       "   spotlight category & sub-category  \n",
-       "0      False        food/food trucks  \n",
-       "1       True              music/rock  \n",
-       "2      False          technology/web  \n",
-       "3      False              music/rock  \n",
-       "4      False           theater/plays  "
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from datetime import datetime as dt\n",
-    "crowdfunding_df[\"launched_at\"] = pd.to_datetime(crowdfunding_df[\"launched_at\"],unit='s').dt.strftime('%Y-%m-%d')\n",
-    "crowdfunding_df[\"deadline\"] = pd.to_datetime(crowdfunding_df[\"deadline\"],unit='s').dt.strftime('%Y-%m-%d')\n",
-    "crowdfunding_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "31782860-51ff-479e-a763-f42cccee5387",
    "metadata": {},
    "outputs": [
@@ -698,15 +495,15 @@
        "backers_count               int64\n",
        "country                    object\n",
        "currency                   object\n",
-       "launched_at                object\n",
-       "deadline                   object\n",
+       "launched_at                 int64\n",
+       "deadline                    int64\n",
        "staff_pick                   bool\n",
        "spotlight                    bool\n",
        "category & sub-category    object\n",
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -718,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "e9aa214a-9e04-4a6c-936c-7cd659c23650",
    "metadata": {},
    "outputs": [
@@ -792,7 +589,7 @@
        "4        2199     Samuel Sorgatz      samuel.sorgatz@gmail.com"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8bd92eb5-b67d-4e9c-b09c-aeaeb435a837",
    "metadata": {},
    "outputs": [
@@ -816,7 +613,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,105 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "427e8c01-420e-4a48-8f15-0d085e8994d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>contact_id</th>\n",
-       "      <th>email</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>4661</td>\n",
-       "      <td>cecilia.velasco@rodrigues.fr</td>\n",
-       "      <td>Cecilia</td>\n",
-       "      <td>Velasco</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3765</td>\n",
-       "      <td>mariana.ellis@rossi.org</td>\n",
-       "      <td>Mariana</td>\n",
-       "      <td>Ellis</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>4187</td>\n",
-       "      <td>sofie.woods@riviere.com</td>\n",
-       "      <td>Sofie</td>\n",
-       "      <td>Woods</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4941</td>\n",
-       "      <td>jeanette.iannotti@yahoo.com</td>\n",
-       "      <td>Jeanette</td>\n",
-       "      <td>Iannotti</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2199</td>\n",
-       "      <td>samuel.sorgatz@gmail.com</td>\n",
-       "      <td>Samuel</td>\n",
-       "      <td>Sorgatz</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   contact_id                         email first_name last_name\n",
-       "0        4661  cecilia.velasco@rodrigues.fr    Cecilia   Velasco\n",
-       "1        3765       mariana.ellis@rossi.org    Mariana     Ellis\n",
-       "2        4187       sofie.woods@riviere.com      Sofie     Woods\n",
-       "3        4941   jeanette.iannotti@yahoo.com   Jeanette  Iannotti\n",
-       "4        2199      samuel.sorgatz@gmail.com     Samuel   Sorgatz"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Splitting Names And Dropping the Name Header\n",
-    "#split names\n",
-    "contact_data_df['first_name'] = contact_data_df['name'].str.split().str[0]\n",
-    "contact_data_df['last_name'] = contact_data_df['name'].str.split().str[-1]\n",
-    "\n",
-    "contact_data_df.drop('name', axis=1, inplace=True)\n",
-    "\n",
-    "contact_data_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "575f9a5d-c70f-4c0a-b697-8a6e42716f40",
    "metadata": {},
    "outputs": [],
